--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,13 +39,20 @@ ul {
   flex-direction: column;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .card-container {
     width: 100vw;
   }
 
   .top-nav-bar {
     padding: 2% 2%;
+  }
+
+  .new-card-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
   }
 }
 
@@ -95,6 +102,25 @@ ul {
 }
 
 /*************************** NEW NOTE SECTION *******************************/
+
+.new-note-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.new-card-container {
+  display: flex;
+  flex-direction: row;
+  width: 40%;
+  justify-content: center;
+}
+
+.new-card-body {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
 .new-card-btn {
   border: rgba(0, 0, 0, 0.25) solid 1px;
   border-radius: 0.2rem;
@@ -106,11 +132,21 @@ ul {
 .new-content-area {
   margin-top: 2%;
   margin-bottom: 0 !important;
+  resize: none;
 }
 
 .alarm-input {
   color: rgba(0, 0, 0, 0.6);
   padding: 0.15rem 0.25rem;
+}
+
+@media screen and (max-width: 600px) {
+  .new-card-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+  }
 }
 /*************************** NAV-BAR SECTION *******************************/
 
