--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,12 +17,6 @@ ul {
   list-style-type: none;
 }
 
-.background-notes {
-  background-color: #b9b9ca;
-  position: absolute;
-  z-index: -20;
-}
-
 .text-wrap {
   word-break: normal;
 }
@@ -92,12 +86,14 @@ ul {
   margin-top: auto;
   display: flex;
   flex-direction: row;
+  background-color: rgb(63, 63, 68);
+  color: rgb(255, 255, 255);
 }
 
 .card-btns .btn {
-  border: rgba(0, 0, 0, 0.25) solid 1px;
+  border: rgb(255, 255, 255) solid 1px;
   border-radius: 0.2rem;
-  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0 0 5px 1px rgb(255, 255, 255); */
   display: inline;
   margin: 0.5rem 0rem 0.5rem 0.5rem;
 }
