--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,6 @@
 <%- include("partials/header"); -%>
 
   <body>
-    
     <body class="register-body">
       <div class="register-div">
         <h1 class="register">Register</h1>
@@ -17,6 +16,10 @@
                 <div class="form-group">
                   <label for="password">Password</label>
                   <input type="password" class="form-control" name="password">
+                </div>
+                <div class="form-group">
+                  <label for="confirm-password">Confirm Password</label>
+                  <input type="password" class="form-control" name="confirmPassword">
                 </div>
                 <button type="submit" class="btn btn-dark register-btn">Register</button>
               </form>
