--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 html,
 body {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   margin: 0px;
   padding: 0px;
   /* overflow-x: hidden;
@@ -312,167 +312,187 @@ a.btn-shine {
 }
 
 /*************************** CONNECT SECTION *******************************/
-
 .connect-body {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url("images/note_and_notebook.jpg") no-repeat center center/cover;
-  font-family: Arial, Helvetica, sans-serif;
-  height: 100vh;
+  url("images/note_and_notebook.jpg") no-repeat center center/cover;
+    font-family: 'Ubuntu', sans-serif;
 }
 
-.connect-div {
-  border: 1px solid #3f3f44;
-  border-radius: 10px;
-  width: 30%;
-  padding: 2%;
-  position: relative;
-  top: 35%;
-  left: 35%;
-  justify-content: center;
+
+
+
+.a-google{
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  padding: 10px 0 10px 75px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  margin-left: 46px;
+  text-align: left;
+  margin-bottom: 27px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
-@media screen and (max-width: 985px) {
-  .connect-div {
-    border: 1px solid #3f3f44;
-    border-radius: 10px;
-    width: 50%;
-    padding: 2%;
-    position: relative;
-    top: 35%;
-    left: 25%;
-    justify-content: center;
-    overflow-x: hidden;
-    overflow-y: hidden;
-  }
-}
-
-@media screen and (max-width: 530px) {
-  .connect-div {
-    border: 1px solid #3f3f44;
-    border-radius: 10px;
-    width: 90%;
-    padding: 2%;
-    position: relative;
-    left: 0;
-    width: 100vw;
-    justify-content: center;
-    overflow-x: hidden;
-    overflow-y: hidden;
-  }
-}
-
-.row {
-  display: flex;
-  flex-direction: column;
-}
-
-.social-media-div.column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-}
-
-.login-register-div.column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  /* border-left: 2px solid #3f3f44; */
-}
-
-.btn-google {
-  display: block;
-  width: auto;
-  height: auto;
-  margin-bottom: 2%;
-}
-
-.btn-facebook {
-  display: block;
-  width: auto;
-  height: auto;
+.a-register {
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.10);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.30);
+  margin-bottom: 50px;
+  margin-left: 46px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .a-login {
-  display: block;
-  width: auto;
-  height: auto;
-  margin-bottom: 2%;
-  margin-top: 2%;
-}
-
-.a-regsiter {
-  display: block;
-  width: auto;
-  height: auto;
-}
-
-.social-media-div > a {
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.10);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.30);
+  margin-bottom: 50px;
+  margin-left: 46px;
   text-align: center;
+  margin-bottom: 27px;
+  font-family: 'Ubuntu', sans-serif;
 }
+
+
 
 /*************************** LOGIN SECTION *******************************/
-
-h1.login {
-  color: #fff;
-  display: inline;
-}
-
 .login-body {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url("images/note_and_notebook.jpg") no-repeat center center/cover;
-  font-family: Arial, Helvetica, sans-serif;
+url("images/note_and_notebook.jpg") no-repeat center center/cover;
+  font-family: 'Ubuntu', sans-serif;
+  
 }
 
-.login-div {
-  display: block;
-  margin: 15% 30%;
-}
-.login-div .row {
-  display: inline;
-}
-
-.login-div .row .col-sm-8 {
-  display: inline;
-}
-
-.login-btn {
-  margin-top: 3%;
-}
 
 /*************************** REGISTER SECTION *******************************/
 
-h1.register {
-  color: #fff;
-  display: inline;
-}
-
 .register-body {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url("images/note_and_notebook.jpg") no-repeat center center/cover;
-  font-family: Arial, Helvetica, sans-serif;
+url("images/note_and_notebook.jpg") no-repeat center center/cover;
+  font-family: 'Ubuntu', sans-serif;
+  
 }
 
-.register-div {
-  display: block;
-  margin: 15% 30%;
-  overflow-x: hidden;
-  overflow-y: hidden;
-}
-.register-div .row {
-  display: inline;
-}
-
-.register-div .row .col-sm-8 {
-  display: inline;
+.main {
+  background-color: #FFFFFF;
+  width: 400px;
+  height: 400px;
+  margin: 7em auto;
+  border-radius: 1.5em;
+  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
 
-.register-btn {
-  margin-top: 3%;
+.sign {
+  padding-top: 40px;
+  color: rgba(0, 0, 0, 0.8);
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  font-size: 23px;
 }
+
+.un {
+width: 76%;
+color: rgb(38, 50, 56);
+font-weight: 700;
+font-size: 14px;
+letter-spacing: 1px;
+background: rgba(136, 126, 126, 0.04);
+padding: 10px 20px;
+border: none;
+border-radius: 20px;
+outline: none;
+box-sizing: border-box;
+border: 2px solid rgba(0, 0, 0, 0.02);
+margin-bottom: 50px;
+margin-left: 46px;
+text-align: center;
+margin-bottom: 27px;
+font-family: 'Ubuntu', sans-serif;
+}
+
+form.form1 {
+  padding-top: 40px;
+}
+
+.pass {
+      width: 76%;
+color: rgb(38, 50, 56);
+font-weight: 700;
+font-size: 14px;
+letter-spacing: 1px;
+background: rgba(136, 126, 126, 0.04);
+padding: 10px 20px;
+border: none;
+border-radius: 20px;
+outline: none;
+box-sizing: border-box;
+border: 2px solid rgba(0, 0, 0, 0.02);
+margin-bottom: 50px;
+margin-left: 46px;
+text-align: center;
+margin-bottom: 27px;
+font-family: 'Ubuntu', sans-serif;
+}
+
+
+.un:focus, .pass:focus {
+  border: 2px solid rgba(0, 0, 0, 0.18) !important;
+  
+}
+
+.submit {
+cursor: pointer;
+  border-radius: 5em;
+  color: #fff;
+/*         background: linear-gradient(to right, #9C27B0, #E040FB); */
+       background: linear-gradient(to right, rgb(6, 6, 5), rgb(115, 111, 110));
+  border: 0;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-family: 'Ubuntu', sans-serif;
+  margin-left: 35%;
+  font-size: 13px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+}
+
+.submit:hover {
+  text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+  color: #E1BEE7;
+  text-decoration: none
+} 
+
+@media (max-width: 600px) {
+  .main {
+      border-radius: 0px;
+  }
 
 /*************************** Alarm SECTION *******************************/
 
