--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -1,21 +1,21 @@
-<%- include("partials/header"); -%>
-  <body class="connect-body">
-    <div class="connect-div">
-      <div class="row">
-        <div class="column social-media-div">
-        <a class="btn btn-md btn-social btn-google" href="/auth/google" role="button">
-          <i class="fab fa-google"></i> Connect with Google
-        </a>
-        <a class="btn btn-md btn-social btn-facebook" href="/auth/facebook" role="button">
-          <i class="fab fa-facebook-f"></i> Connect with Facebook
-        </a>
-        </div>
-        <div class="column login-register-div">
-          <a href="/login" class="btn btn-outline-light btn-md a-login">Login</a>
-          <a href="/register" class="btn btn-outline-light btn-md a-register" >Register</a>
-        </div>
-      </div>
+ <%- include("partials/header"); -%>
+<body class="connect-body">
+  <div class="main">
+    <p class="sign" align="center">Sign in</p>
+    <form class="form1">
+      <a class="btn btn-md btn-social btn-google a-google" href="/auth/google" role="button"> 
+        <i class="devicon-google-plain"></i>Connect with Google
+      </a>
+      <a href="/login" class="btn btn-outline-light btn-md a-login">Login</a>
+      <a href="/register" class="btn btn-outline-light btn-md a-register" >Register</a>
+    </form>
+                   
     </div>
-   <%- include("partials/footer"); -%>
-  </body>
-</html>
+     
+</body>
+<%- include("partials/footer"); -%>
+</html> 
+
+
+
+
