--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,28 +1,15 @@
 <%- include("partials/header"); -%>
-  <body class="login-body">
-    <div class="login-div">
-      <h1 class="login">Login</h1>
-      <div class="row">
-        <div class="col-sm-8">
-          <div class="card">
-            <div class="card-body">
-              <form action="/login" method="POST">
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" name="username">
-              </div>
-              <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" name="password">
-              </div>
-              <button type="submit" class="btn btn-dark login-btn">Login</button>
-            </form>
-            </div>
-          </div>
-        </div>
-      </div>
+<body class="login-body">
+  <div class="main">
+    <p class="sign" align="center">Sign in</p>
+    <form class="form1" action="/login" method="POST">
+      <input class="un " type="email" align="center" placeholder="Email" name="username">
+      <input class="pass" type="password" align="center" placeholder="Password" name="password">
+      <button class="submit" type="submit" align="center">Sign in</button>
+    </form>
+                   
     </div>
-
+     
+</body>
 <%- include("partials/footer"); -%>
-  </body>
-</html>
+</html> 
