--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,35 +1,16 @@
 <%- include("partials/header"); -%>
-
-  <body>
-    <body class="register-body">
-      <div class="register-div">
-        <h1 class="register">Register</h1>
-        <div class="row">
-          <div class="col-sm-8">
-            <div class="card">
-              <div class="card-body">
-                <form action="/register" method="POST">
-                <div class="form-group">
-                  <label for="email">Email</label>
-                  <input type="email" class="form-control" name="username">
-                </div>
-                <div class="form-group">
-                  <label for="password">Password</label>
-                  <input type="password" class="form-control" name="password">
-                </div>
-                <div class="form-group">
-                  <label for="confirm-password">Confirm Password</label>
-                  <input type="password" class="form-control" name="confirmPassword">
-                </div>
-                <button type="submit" class="btn btn-dark register-btn">Register</button>
-              </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    <%- include("partials/footer"); -%>
-    
-  </body>
-</html>
+<body class="register-body">
+  <div class="main">
+    <p class="sign" align="center">Sign up</p>
+    <form class="form1" action="/register" method="POST">
+      <input class="un " type="email" align="center" placeholder="Email" name="username">
+      <input class="pass" type="password" align="center" placeholder="Password" name="password">
+      <input class="pass" type="password" align="center" placeholder="Confirm password" name="confirmPassword">
+      <button class="submit" type="submit" align="center">Sign up</button>
+    </form>  
+                   
+    </div>
+     
+</body>
+<%- include("partials/footer"); -%>
+</html> 
