--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,7 +31,7 @@ ul {
 
 .card-container {
   border: rgba(0, 0, 0, 0.25) solid 0.5px;
-  border-radius: 0.2rem;
+  border-radius: 10px;
   box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.3);
   margin: 0.5rem 0.5rem 0.5rem 0.5rem;
   width: 23vw;
@@ -45,7 +45,7 @@ ul {
 @media screen and (max-width: 1100px) {
   .card-container {
     border: rgba(0, 0, 0, 0.25) solid 0.5px;
-    border-radius: 0.2rem;
+    border-radius: 10px;
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.3);
     margin: 0.5rem 0.5rem 0.5rem 0.5rem;
     width: 31%;
@@ -60,7 +60,7 @@ ul {
 @media screen and (max-width: 850px) {
   .card-container {
     border: rgba(0, 0, 0, 0.25) solid 0.5px;
-    border-radius: 0.2rem;
+    border-radius: 10px;
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.3);
     margin: 0.5rem 0.5rem 0.5rem 0.5rem;
     width: 45%;
@@ -282,6 +282,7 @@ a.btn-shine {
 .btn-shine {
   text-decoration: none;
   border: 1px solid rgb(63, 63, 68);
+  border-radius: 10px;
   position: relative;
   overflow: hidden;
 }
@@ -314,14 +315,11 @@ a.btn-shine {
 /*************************** CONNECT SECTION *******************************/
 .connect-body {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-  url("images/note_and_notebook.jpg") no-repeat center center/cover;
-    font-family: 'Ubuntu', sans-serif;
+    url("images/note_and_notebook.jpg") no-repeat center center/cover;
+  font-family: "Ubuntu", sans-serif;
 }
 
-
-
-
-.a-google{
+.a-google {
   width: 76%;
   color: rgb(38, 50, 56);
   font-weight: 700;
@@ -336,7 +334,7 @@ a.btn-shine {
   margin-left: 46px;
   text-align: left;
   margin-bottom: 27px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .a-register {
@@ -345,18 +343,18 @@ a.btn-shine {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 1px;
-  background: rgba(136, 126, 126, 0.10);
+  background: rgba(136, 126, 126, 0.1);
   padding: 10px 20px;
   border: none;
   border-radius: 20px;
   outline: none;
   box-sizing: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.30);
+  border: 2px solid rgba(0, 0, 0, 0.3);
   margin-bottom: 50px;
   margin-left: 46px;
   text-align: center;
   margin-bottom: 27px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .a-login {
@@ -365,42 +363,37 @@ a.btn-shine {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 1px;
-  background: rgba(136, 126, 126, 0.10);
+  background: rgba(136, 126, 126, 0.1);
   padding: 10px 20px;
   border: none;
   border-radius: 20px;
   outline: none;
   box-sizing: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.30);
+  border: 2px solid rgba(0, 0, 0, 0.3);
   margin-bottom: 50px;
   margin-left: 46px;
   text-align: center;
   margin-bottom: 27px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
-
-
 
 /*************************** LOGIN SECTION *******************************/
 .login-body {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-url("images/note_and_notebook.jpg") no-repeat center center/cover;
-  font-family: 'Ubuntu', sans-serif;
-  
+    url("images/note_and_notebook.jpg") no-repeat center center/cover;
+  font-family: "Ubuntu", sans-serif;
 }
-
 
 /*************************** REGISTER SECTION *******************************/
 
 .register-body {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-url("images/note_and_notebook.jpg") no-repeat center center/cover;
-  font-family: 'Ubuntu', sans-serif;
-  
+    url("images/note_and_notebook.jpg") no-repeat center center/cover;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .main {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   width: 400px;
   height: 400px;
   margin: 7em auto;
@@ -411,29 +404,29 @@ url("images/note_and_notebook.jpg") no-repeat center center/cover;
 .sign {
   padding-top: 40px;
   color: rgba(0, 0, 0, 0.8);
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: bold;
   font-size: 23px;
 }
 
 .un {
-width: 76%;
-color: rgb(38, 50, 56);
-font-weight: 700;
-font-size: 14px;
-letter-spacing: 1px;
-background: rgba(136, 126, 126, 0.04);
-padding: 10px 20px;
-border: none;
-border-radius: 20px;
-outline: none;
-box-sizing: border-box;
-border: 2px solid rgba(0, 0, 0, 0.02);
-margin-bottom: 50px;
-margin-left: 46px;
-text-align: center;
-margin-bottom: 27px;
-font-family: 'Ubuntu', sans-serif;
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  margin-left: 46px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-family: "Ubuntu", sans-serif;
 }
 
 form.form1 {
@@ -441,43 +434,42 @@ form.form1 {
 }
 
 .pass {
-      width: 76%;
-color: rgb(38, 50, 56);
-font-weight: 700;
-font-size: 14px;
-letter-spacing: 1px;
-background: rgba(136, 126, 126, 0.04);
-padding: 10px 20px;
-border: none;
-border-radius: 20px;
-outline: none;
-box-sizing: border-box;
-border: 2px solid rgba(0, 0, 0, 0.02);
-margin-bottom: 50px;
-margin-left: 46px;
-text-align: center;
-margin-bottom: 27px;
-font-family: 'Ubuntu', sans-serif;
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  margin-left: 46px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-family: "Ubuntu", sans-serif;
 }
 
-
-.un:focus, .pass:focus {
+.un:focus,
+.pass:focus {
   border: 2px solid rgba(0, 0, 0, 0.18) !important;
-  
 }
 
 .submit {
-cursor: pointer;
+  cursor: pointer;
   border-radius: 5em;
   color: #fff;
-/*         background: linear-gradient(to right, #9C27B0, #E040FB); */
-       background: linear-gradient(to right, rgb(6, 6, 5), rgb(115, 111, 110));
+  /*         background: linear-gradient(to right, #9C27B0, #E040FB); */
+  background: linear-gradient(to right, rgb(6, 6, 5), rgb(115, 111, 110));
   border: 0;
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 10px;
   padding-top: 10px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
   margin-left: 35%;
   font-size: 13px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
@@ -485,14 +477,15 @@ cursor: pointer;
 
 .submit:hover {
   text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-  color: #E1BEE7;
-  text-decoration: none
-} 
+  color: #e1bee7;
+  text-decoration: none;
+}
 
 @media (max-width: 600px) {
   .main {
-      border-radius: 0px;
+    border-radius: 0px;
   }
+}
 
 /*************************** Alarm SECTION *******************************/
 
