--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -71,7 +71,7 @@
                                 <input
                                   type="text"
                                   name="title"
-                                  class="form-control title-input-custom"
+                                  class="card-input title-input-custom"
 
                                   id="title"
                                   aria-describedby="emailHelp"
@@ -82,7 +82,7 @@
                               <div class="mb-3 new-content-area">
                               
                                   <textarea
-                                    class="form-control"
+                                    class="card-input"
                                     name="content"
                                     id="content"
                                     rows="8"
