--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -134,6 +134,28 @@ ul {
 
 /*************************** NEW NOTE SECTION *******************************/
 
+.card-input {
+  width: 100%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  text-align: center;
+  margin-bottom: 10px;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.card-input:focus {
+  border: 2px solid rgba(0, 0, 0, 0.18) !important;
+}
+
 .new-note-container {
   display: flex;
   flex-direction: column;
