--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -3,10 +3,10 @@
     <div class="top-nav-bar">
       <ul class="">
           <li class="nav-item">
-          <a class="standard-btn" href="/notes" role="button">Notes</a>
+          <a class="standard-btn notes-link" href="/notes" role="button">Notes</a>
           </li>
           <li class="nav-item">
-          <a class="standard-btn" href="/logout" role="button">Lot out </a>
+          <a class="standard-btn log-out-link" href="/logout" role="button">Lot out </a>
           </li>  
           </li>
       </ul>
